fix tests and configure docker build